test/Runner/errors/tests/MI/TestSuite/Prepare2.runtime.js
eve("Suite", () => {
	suite("Suite", () => {}, { timeout: "foo"})
});